--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonschema": "^1.4.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
     "sequelize": "^6.30.0"
