--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "express": "^4.18.2",
     "jsonschema": "^1.4.1",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
-    "sequelize": "^6.30.0"
+    "sequelize": "^6.30.0",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "dev": "nodemon src/server.js"
